fixed visual that was causing the space between the last product card and the footer to be way too much

--- a/src/Containers/Products/Products.css
+++ b/src/Containers/Products/Products.css
@@ -1,9 +1,5 @@
 .product-section {
-    display: grid;
-    min-height: 78vh;
-    grid-template-rows: repeat(5, 1fr);
-    grid-gap: 15px;
-    grid-auto-flow: column;
+    min-height: 55vh;
     margin: 3% 0 3% 1.2%;
     flex: 4.7;
 }
