--- a/src/Containers/Sidebar/Filters/Filters.css
+++ b/src/Containers/Sidebar/Filters/Filters.css
@@ -173,10 +173,11 @@
     top: 2%;
     right: 5%;
     border: none;
-    background: #2c2b2b;
+    background-color: #2c3e50;
     padding: 1.8%;
     border-radius: 50%;
     cursor: pointer;
+    display: none;
 }
 
 .close-filters-btn svg {
@@ -194,6 +195,9 @@
     .filter-btn {
         display: block;
         z-index: 12;
+    }
+    .close-filters-btn{
+        display: block;
     }
 
     aside.sidebar {
